--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
   },
   "dependencies": {
     "gulp-svg-sprite": "1.5.0",
-    "jquery-timepicker": "^1.3.3",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-dist": "^1.12.1",
     "retinajs": "2.1.3",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "sticky-js": "^1.3.0"
   }
 }
