--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "gulp-svg-sprite": "1.5.0",
     "retinajs": "2.1.3",
-    "slick-carousel": "1.8.1",
-    "sticky-js": "^1.3.0"
+    "slick-carousel": "1.8.1"
   }
 }
