--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "gulp-svg-sprite": "1.5.0",
     "retinajs": "2.1.3",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "swiper": "5.4.1"
   }
 }
