--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.5.0"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "gulp-svg-sprite": "1.5.0",
     "retinajs": "2.1.3",
     "slick-carousel": "1.8.1",
