--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gulp-svg-sprite": "1.5.0",
+    "intl-tel-input": "^17.0.3",
+    "jquery-ui-dist": "^1.12.1",
+    "jquery.maskedinput": "^1.4.1",
     "retinajs": "2.1.3",
-    "slick-carousel": "1.8.1",
-    "swiper": "5.4.1"
+    "slick-carousel": "1.8.1"
   }
 }
