--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "intl-tel-input": "^17.0.3",
     "jquery-ui-dist": "^1.12.1",
     "jquery.maskedinput": "^1.4.1",
+    "lazyload": "^2.0.0-rc.2",
     "retinajs": "2.1.3",
     "slick-carousel": "1.8.1"
   }
