--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery.maskedinput": "^1.4.1",
     "lazyload": "^2.0.0-rc.2",
     "retinajs": "2.1.3",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "vanilla-lazyload": "^16.1.0"
   }
 }
